--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "contributors" : [
     "Aaron Quint <aaron@quirkey.com> (http://www.quirkey.com)",
     "Brian Donovan (http://brian-donovan.com)",
+    "Esad Hajdarevic <esad@esse.at>",
     "Jon Ursenbach <jon@ursenba.ch> (http://jon.ursenba.ch)"
   ],
   "repository" : {
