Match the authentication documentation.
https://github.com/37signals/api/blob/master/sections/authentication.md

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "Aaron Quint <aaron@quirkey.com> (http://www.quirkey.com)",
     "Brian Donovan (http://brian-donovan.com)",
     "Esad Hajdarevic <esad@esse.at>",
-    "Jon Ursenbach <jon@ursenba.ch> (http://jon.ursenba.ch)"
+    "Jon Ursenbach <jon@ursenba.ch> (http://jon.ursenba.ch)",
+    "Johan Sundström <oyasumi@gmail.com> (http://ecmanaut.blogspot.com)"
   ],
   "repository" : {
     "type" : "git",
