Add David Bushong to contributors.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "Brian Donovan (http://brian-donovan.com)",
     "Esad Hajdarevic <esad@esse.at>",
     "Jon Ursenbach <jon@ursenba.ch> (http://jon.ursenba.ch)",
-    "Johan Sundström <oyasumi@gmail.com> (http://ecmanaut.blogspot.com)"
+    "Johan Sundström <oyasumi@gmail.com> (http://ecmanaut.blogspot.com)",
+    "David Bushong <david@bushong.net> (http://bushong.net/dave/)"
   ],
   "repository" : {
     "type" : "git",
